--- a/main.css
+++ b/main.css
@@ -139,12 +139,14 @@ body{
 }
 .skillTitle, .langTitle{
     font-size: 25px;
-    color: var(--light);
+    color: var(--x-light);
     font-weight: bold;
     padding: 15px;
+    text-shadow: #0e84884b 3px 3px 3px;;
 }
 
 .icon{
     width: 80px;
     height: 80px;
+    margin-top: -10px;
 }
