--- a/main.css
+++ b/main.css
@@ -10,18 +10,24 @@
     --shdow-hover: 0px 15px 20px rgba(0, 0, 0, 0.15);
 
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
+    padding: 0;
+    margin: 0;
     background-color: var(--dark);
     color: var(--x-light);
-    padding: 15px;
     font-family: "Poppins";
     font-size: 40px;
     text-align: center;
+    width: 100%;
 }
 
 /* HERO */
 
 .hero, .skillsCard{
+    margin: 15px;
     padding: 15px;
     border-radius: 20px;
     background-color: var(--ls-dark);
@@ -43,9 +49,6 @@ body{
 .occupation{
     font-size: 20px;
     display: inline;
-}
-.smallerCLine{
-    font-size: 20px;
 }
 .moreBtn{
     background-color: var(--mid);
@@ -149,4 +152,24 @@ body{
     width: 80px;
     height: 80px;
     margin-top: -10px;
+}
+
+.topBtn{
+    background-color: var(--light);
+    border-radius: 360px;
+    border: none;
+    color: var(--x-light);
+    font-size: 30px;
+    z-index: 999;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    cursor: pointer;
+}
+.topBtn img{
+    width: 40px;
+    height: 40px;
+}
+.topBtn:hover{
+    background-color: #0e8488e3;
 }
